--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,7 @@ dependencies {
 //    runtime('mysql:mysql-connector-java')
     compileOnly('org.projectlombok:lombok')
     testCompile("org.junit.jupiter:junit-jupiter-api:5.3.1")
+    testCompile("org.junit.jupiter:junit-jupiter-params:5.3.1")
     testRuntime("org.junit.jupiter:junit-jupiter-engine:5.3.1")
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
