--- a/build.gradle
+++ b/build.gradle
@@ -47,11 +47,11 @@ repositories {
 }
 
 dependencies {
-//    compile('org.springframework.boot:spring-boot-starter-data-jpa')
+//    compile('org.springframework.data:spring-data-jpa')
 //    compile('org.springframework.session:spring-session')
 
-    compile('org.springframework.session:spring-session-data-redis')
-    compile('io.lettuce:lettuce-core')
+//    compile('org.springframework.session:spring-session-data-redis')
+//    compile('io.lettuce:lettuce-core')
     compile('org.springframework.boot:spring-boot-starter-security')
 
 //    compile('org.springframework.boot:spring-boot-starter-data-redis')
@@ -64,6 +64,14 @@ dependencies {
     compile("org.jetbrains.kotlin:kotlin-reflect")
 
 //    runtime('mysql:mysql-connector-java')
+
+    // For Java 8 Date/Time Supprot
+    compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
+
+    // For Working with Json Web Tokens (JWT)
+    compile 'io.jsonwebtoken:jjwt-api:0.10.5'
+    runtime 'io.jsonwebtoken:jjwt-impl:0.10.5',
+            'io.jsonwebtoken:jjwt-jackson:0.10.5'
 
     testCompile("org.junit.jupiter:junit-jupiter-api:5.3.1")
     testCompile("org.junit.jupiter:junit-jupiter-params:5.3.1")
