--- a/build.gradle
+++ b/build.gradle
@@ -73,7 +73,8 @@ dependencies {
     runtime 'io.jsonwebtoken:jjwt-impl:0.10.5',
             'io.jsonwebtoken:jjwt-jackson:0.10.5'
 
-    compile 'org.apache.poi:poi:3.17'
+    compile 'org.apache.poi:poi:3.9'
+    compile 'org.apache.poi:poi-ooxml:3.9'
     
     compile 'org.apache.tika:tika-core:1.14'
 
