--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = '1.2.71'
+        kotlinVersion = '1.3.0'
         springBootVersion = '2.0.4.RELEASE'
     }
     repositories {
@@ -46,6 +46,13 @@ repositories {
     mavenCentral()
 }
 
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+}
+
 dependencies {
 //    compile('org.springframework.data:spring-data-jpa')
 //    compile('org.springframework.session:spring-session')
@@ -59,6 +66,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-actuator")
     compile('org.springframework.boot:spring-boot-starter-data-neo4j')
 //    compile('org.springframework.data:spring-data-neo4j:5.1.1.RELEASE')
+
+    developmentOnly("org.springframework.boot:spring-boot-devtools")
 
     compile('com.fasterxml.jackson.module:jackson-module-kotlin')
     compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
