--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        kotlinVersion = '1.2.71'
+        kotlinVersion = '1.3.0'
         springBootVersion = '2.0.4.RELEASE'
     }
     repositories {
@@ -78,6 +78,8 @@ dependencies {
     compile 'org.apache.poi:poi-ooxml:3.9'
     
     compile 'org.apache.tika:tika-core:1.14'
+    
+    compile 'org.modelmapper:modelmapper:2.3.0'
 
     testCompile("org.junit.jupiter:junit-jupiter-api:5.3.1")
     testCompile("org.junit.jupiter:junit-jupiter-params:5.3.1")
